changed home page to display homework as a list

--- a/home.html
+++ b/home.html
@@ -8,6 +8,9 @@
 		<header>
 			<h1>Please see the following links for my homework submissions</h1>
 		</header>
-		<a href="./csci-331/band/favoriteband.html">Homework 1</a>
+        <ol>
+            <li><a href="./csci-331/band/favoriteband.html">Homework 1</a></li>
+            <li>Heres where the next homework will go</li>
+        </ol>
 	</body>
 </html>
