Added weekly calender

--- a/home.html
+++ b/home.html
@@ -1,16 +1,183 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">	
-		<title>Michael Buffington</title>
-	</head>
-	<body>
-		<header>
-			<h1>Please see the following links for my homework submissions</h1>
-		</header>
-        <ol>
-            <li><a href="./csci-331/band/favoriteband.html">Homework 1</a></li>
-            <li>Heres where the next homework will go</li>
-        </ol>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Michael Buffington</title>
+</head>
+<body>
+    <Header><h1>Michael Buffington's CSCI-331 Homepage</h1></Header>
+    <section id="homework">
+        <h2>
+            Homework Assignments
+        </h2>
+        <table>
+            <tr>
+                <th>#</th>
+                <th>Name</th>
+                <th>Due Date</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td><a href="band\favoriteband.html">Hello Server</a></td>
+                <td>September 3rd, 2022</td>
+            </tr>
+        </table>
+    </section>
+    <section id="calendar">
+        <h2>
+            This is my fall semester schedule
+        </h2>
+        <table border="1 px solid";>
+            <tr>
+                <th></th>
+                <th>Sunday</th>
+                <th>Monday</th>
+                <th>Tuesday</th>
+                <th>Wednesday</th>
+                <th>Thursday</th>
+                <th>Friday</th>
+                <th>Saturday</th>
+            </tr>
+            <tr>
+                <th>7:00 AM</th>
+                <td></td>
+                <td>Work</td>
+                <td>Work</td>
+                <td>Work</td>
+                <td>Work</td>
+                <td>Work</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>8:00 AM</th>
+                <td></td>
+                <td>Work</td>
+                <td>Work</td>
+                <td>Work</td>
+                <td>Work</td>
+                <td>Work</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>9:00 AM</th>
+                <td></td>
+                <td>Work</td>
+                <td>Work</td>
+                <td>Work</td>
+                <td>Work</td>
+                <td>Work</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>10:00 AM</th>
+                <td></td>
+                <td>ACTG-201</td>
+                <td>Work</td>
+                <td>ACTG-201</td>
+                <td>Work</td>
+                <td>ACTG-201</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>11:00 AM</th>
+                <td></td>
+                <td></td>
+                <td>Work</td>
+                <td></td>
+                <td>Work</td>
+                <td></td>
+                <td></td>
+                
+            </tr>
+            <tr>
+                <th>12:00 PM</th>
+                <td></td>
+                <td></td>
+                <td>ESOF-322</td>
+                <td></td>
+                <td>ESOF-322</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>1:00 PM</th>
+                <td></td>
+                <td></td>
+                <td>ESOF-322</td>
+                <td></td>
+                <td>ESOF-322</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>2:00 PM</th>
+                <td></td>
+                <td>CS-440</td>
+                <td>ECNS-201</td>
+                <td>CS-440</td>
+                <td>ECNS-201</td>
+                <td>CS-440</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>3:00 PM</th>
+                <td></td>
+                <td></td>
+                <td>ECNS-201</td>
+                <td></td>
+                <td>ECNS-201</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>4:00 PM</th>
+                <td></td>
+                <td>CSCI-331</td>
+                <td></td>
+                <td>CSCI-331</td>
+                <td></td>
+                <td>CSCI-331</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>5:00 PM</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td>PARTY</td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>6:00 PM</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <th>7:00 PM</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+        </table>
+    </section>
+    <footer>
+        <p>Check out my <a href="https://github.com/michaelbuff">Github</a> or
+            <a href="https://www.linkedin.com/in/michael-buffington-5751ba152/">LinkedIn</a></p>
+    </footer>
+
+</body>
 </html>
