added zybook lab 4.9 for homework due on 9/9/2022

--- a/home.html
+++ b/home.html
@@ -23,6 +23,11 @@
                 <td><a href="band\favoriteband.html">Hello Server</a></td>
                 <td>September 3rd, 2022</td>
             </tr>
+            <tr>
+                <td>2</td>
+                <td><a href="lab4_9/index.html">Zybook Lab 4.9</a></td>
+                <td>September 9th, 2022</td>
+            </tr>
         </table>
     </section>
     <section id="calendar">
