--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
     <title>Michael Buffington</title>
 </head>
 <body>
@@ -12,29 +13,26 @@
         <h2>
             Homework Assignments
         </h2>
-        <table>
-            <tr>
-                <th>#</th>
-                <th>Name</th>
-                <th>Due Date</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td><a href="band\favoriteband.html">Hello Server</a></td>
-                <td>September 3rd, 2022</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td><a href="lab4_9/index.html">Zybook Lab 4.9</a></td>
-                <td>September 9th, 2022</td>
-            </tr>
-        </table>
+        <div class="container">
+            <div class="flexitem">
+                <p><a href="band\favoriteband.html">Hello Server</a></p>
+                <p>due Sep 2nd</p>
+            </div>
+            <div class="flexitem">
+                <p><a href="lab4_9/index.html">Zybook Lab 4.9</a></p>
+                <p>due Sep 9th</p>
+            </div>
+            <div class="flexitem">
+                <p><a href="lab7_15/index.html">Zybook Lab 7.15</a></p>
+                <p>due Sep 15th</p>
+            </div>
+        </div>
     </section>
     <section id="calendar">
         <h2>
-            This is my fall semester schedule
+            Fall Semester
         </h2>
-        <table border="1 px solid";>
+        <table>
             <tr>
                 <th></th>
                 <th>Sunday</th>
