fixed home page linking for flex items

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -28,12 +28,22 @@
                 </div>
                 
                 <div class="HWflexitem">
-                    <p>Zybook Lab 4.9</p>
-                    <p>due Sep 9th</p>
+                    <a href="./lab4_9/index.html">
+                        <p>Zybook Lab 4.9</p>
+                        <p>due Sep 9th</p>
+                    </a>
                 </div>
                 <div class="HWflexitem">
-                    <p>Zybook Lab 7.15</p>
-                    <p>due Sep 15th</p>
+                    <a href="./lab7_15/index.html">
+                        <p>Zybook Lab 7.15</p>
+                        <p>due Sep 15th</p>
+                    </a>
+                </div>
+                <div class="HWflexitem">
+                    <a href="./lab8_16/index.html">
+                        <p>Zybook Lab 8.16</p>
+                        <p>due Sep 24th</p>
+                    </a>
                 </div>
             </div>
         </section>
