adding lamp project and other missed commits

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -13,6 +13,7 @@
 <body>
     <div id="header">
         <Header><h1>Michael Buffington's CSCI-331 Homepage</h1></Header>
+        <!--todo, add dark mode switch -->
     </div>
     <div id="pageContent">
         <section id="homework">
@@ -45,9 +46,16 @@
                         <p>due Sep 24th</p>
                     </a>
                 </div>
+                <div class="HWflexitem">
+                    <a href="./LAMP/index.html">
+                        <p>LAMP project</p>
+                        <p>due Oct 14th</p>
+                    </a>
+                </div>
             </div>
         </section>
         <section id="calendar">
+            <!--todo: add hide calender switch -->
             <h2>
                 Fall Semester
             </h2>
@@ -196,6 +204,7 @@
     
             </table>
         </section>
+        <section id="ajaxDemo"></section>
         <footer>
             <p>Check out my <a href="https://github.com/michaelbuff">Github</a> or
                 <a href="https://www.linkedin.com/in/michael-buffington-5751ba152/">LinkedIn</a></p>
